examples/tests/valid/identical_inflights.w
let x = inflight fn() {};
let y = inflight fn() {};
