examples/tests/invalid/lift_cannot_reassign_inflight.w

let var x = "hello";

inflight () => {
  x = "bye";
};
